<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <View
        android:id="@+id/bgArch"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="@drawable/bg_arch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="207dp"
        android:layout_height="232dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/smart_first_aid_logo"
        app:layout_constraintBottom_toBottomOf="@+id/bgArch"
        app:layout_constraintEnd_toEndOf="@+id/bgArch"
        app:layout_constraintStart_toStartOf="@id/bgArch"
        app:layout_constraintTop_toTopOf="@id/bgArch"
        app:layout_constraintVertical_bias="0.131"
        android:id="@+id/appLogo"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="#01670C"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bgArch"
        app:layout_constraintEnd_toEndOf="@+id/bgArch"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/bgArch"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/tagline"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bgArch"
        app:layout_constraintEnd_toEndOf="@id/bgArch"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/bgArch"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="177dp"
        android:layout_height="79dp"
        android:backgroundTint="#4FF8F2"
        android:text="@string/signIn"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#63F3DD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgArch"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/register"
        android:layout_width="177dp"
        android:layout_height="79dp"
        android:backgroundTint="#4FF8F2"
        android:text="@string/register"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#63F3DD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/versionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>